修改 Tomcat 部署方式